--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
+    "mongodb": "^3.1.13",
     "mongoose": "^5.4.11",
     "mongoose-unique-validator": "^2.0.2",
     "multer": "^1.4.1"
